--- a/Missing_Number/Base.lproj/Main.storyboard
+++ b/Missing_Number/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -109,7 +110,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="begain-img" translatesAutoresizingMaskIntoConstraints="NO" id="Nu3-HC-UOM">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0W3-X6-dxm">
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0W3-X6-dxm">
                                 <rect key="frame" x="115" y="312.5" width="145" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="145" id="9u3-Fw-ErP"/>
@@ -232,84 +233,84 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K9p-kt-TeK">
-                                <rect key="frame" x="36" y="70" width="88" height="99.5"/>
+                                <rect key="frame" x="36" y="70" width="87.5" height="99.5"/>
                                 <state key="normal" title="Button" image="Group 1"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="bGS-qa-fe7"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oId-yb-Fdc">
-                                <rect key="frame" x="144" y="70" width="87" height="99.5"/>
+                                <rect key="frame" x="143.5" y="70" width="88" height="99.5"/>
                                 <state key="normal" image="Group 2"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="I8b-ix-Zdn"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="804-ia-9jW">
-                                <rect key="frame" x="251" y="70" width="88" height="99.5"/>
+                                <rect key="frame" x="251.5" y="70" width="87.5" height="99.5"/>
                                 <state key="normal" title="Button" image="Group 3"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="eR6-2A-Oza"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XOy-EW-3lg">
-                                <rect key="frame" x="36" y="219.5" width="88" height="99"/>
+                                <rect key="frame" x="36" y="219.5" width="87.5" height="99"/>
                                 <state key="normal" title="Button" image="Group 4"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="Wct-P3-CBN"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jKB-bT-cV3">
-                                <rect key="frame" x="251" y="219.5" width="88" height="99"/>
+                                <rect key="frame" x="251.5" y="219.5" width="87.5" height="99"/>
                                 <state key="normal" title="Button" image="Group 6"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="Ps9-Zh-2le"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="7" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OPG-xv-4tp">
-                                <rect key="frame" x="36" y="368.5" width="88" height="99.5"/>
+                                <rect key="frame" x="36" y="368.5" width="87.5" height="99.5"/>
                                 <state key="normal" title="Button" image="Group 7"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="VtL-Ul-aeZ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="8" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vKk-2Z-QuD">
-                                <rect key="frame" x="144" y="368.5" width="87" height="99.5"/>
+                                <rect key="frame" x="143.5" y="368.5" width="88" height="99.5"/>
                                 <state key="normal" title="Button" image="Group 8"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="fhd-jH-FSX"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Roi-YB-ecY">
-                                <rect key="frame" x="144" y="518" width="87" height="99"/>
+                                <rect key="frame" x="143.5" y="518" width="88" height="99"/>
                                 <state key="normal" title="Button" image="Group 0"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="BY1-L0-v0x"/>
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q1q-E2-Yyl">
-                                <rect key="frame" x="36" y="518" width="88" height="99"/>
+                                <rect key="frame" x="36" y="518" width="87.5" height="99"/>
                                 <state key="normal" title="Button" image="Group 0"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="xRh-re-vgC"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="9" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r6z-ac-A7K">
-                                <rect key="frame" x="251" y="368.5" width="88" height="99.5"/>
+                                <rect key="frame" x="251.5" y="368.5" width="87.5" height="99.5"/>
                                 <state key="normal" title="Button" image="Group 9"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="6N7-1k-NpD"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qbW-QV-DV7">
-                                <rect key="frame" x="144" y="219.5" width="87" height="99"/>
+                                <rect key="frame" x="143.5" y="219.5" width="88" height="99"/>
                                 <state key="normal" title="Button" image="Group 5"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="ezf-s7-Y0b"/>
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MSE-Oi-DEc">
-                                <rect key="frame" x="251" y="518" width="88" height="99"/>
+                                <rect key="frame" x="251.5" y="518" width="87.5" height="99"/>
                                 <state key="normal" title="Button" image="Group 0"/>
                                 <connections>
                                     <action selector="putNumber:" destination="et9-hX-ClF" eventType="touchUpInside" id="UrK-4f-UvL"/>
